--- a/Updater Manager Library/Updater Manager Library.csproj
+++ b/Updater Manager Library/Updater Manager Library.csproj
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="DownloadForm.cs">
       <SubType>Form</SubType>
@@ -83,6 +86,9 @@
       <Project>{a0ece02e-31d0-4e8b-a355-bfe61df97cae}</Project>
       <Name>Custom Control Collection</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
